# Framecycler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  requirements-oiio-spike.txt  requirements.txt  run.bat  run.sh  setup.iss  vcpkg.json
.github/workflows/: ci.yml  oiio-spike.yml  package.yml
apps/example_add_version/: package.py  package.toml
apps/example_apply_cdl/: package.py  package.toml
apps/example_per_stack_cdl/: package.py  package.toml
apps/example_session_panel/: package.py  package.toml
apps/ocio_api_loader/: package.py  package.toml
benchmarks/: 20260719_exr-decode-path-rewrite_2ebd227.json  20260719_gpu-upload-pipeline-churn_ab.json  20260719_transport-frame-clock_ab.json  20260720_display-vsync-transport-master_ab.json  20260720_zero-copy-hotpath_ab.json
cmake/: FindFFmpeg.cmake
packaging/: bundle_filter.py  framecycler.spec  native-deps.md  perf_baselines.json
packaging/macos/: entitlements.plist
scripts/: benchmark_exr_proxy.py  benchmark_gpu_ab.py  benchmark_gpu_churn.py  benchmark_movie_convert.py  benchmark_native_decode.py  benchmark_playback.py  benchmark_transport_ab.py  benchmark_zero_copy_hotpath.py  build_rhi_spike_b.py  capture_testfootage_screenshot.py  check_native_deps.py  ci_soft_perf_gate.py  generate_platform_icons.py  generate_version.py  macos_sign_notarize.py  oiio_spike.py  qt_sdk.py  rhi_spike_a.py  rhi_spike_b.py  verify_exr_viewport.py  verify_testfootage_pipeline.py
spikes/rhi_spike_b/: CMakeLists.txt  rhi_spike_bindings.cpp
src/cpp/bindings/: python_bindings.cpp
src/cpp/engine/: audio_engine.cpp  audio_engine.h  cache_manager.cpp  cache_manager.h  display_upload_queue.cpp  display_upload_queue.h  gl_loader.h  gpu_texture_cache.cpp  gpu_texture_cache.h  half_convert.cpp  half_convert.h  hw_frame_ticket.cpp  hw_frame_ticket.h  hw_texture_import.h  hw_texture_import_d3d11.cpp  hw_texture_import_metal.mm  hw_texture_import_vulkan.cpp  metal_present_sync.h  metal_present_sync.mm  miniaudio_impl.cpp  native_audio_decoder.cpp  native_audio_decoder.h  native_decoder.cpp  native_decoder.h  native_movie_decoder.cpp  native_movie_decoder.h  prefetch_engine.cpp  prefetch_engine.h  renderer.cpp  renderer.h  rhi_renderer.cpp  rhi_renderer.h  scope_analyzer.cpp  scope_analyzer.h  transport_clock.cpp  transport_clock.h
src/cpp/engine/shaders/: nv12_to_rgba16f.comp  nv12_to_rgba16f.spv  nv12_to_rgba16f_spv.h
src/framecycler/: __init__.py  __main__.py  main.py
src/framecycler/color/: __init__.py  ocio_manager.py
src/framecycler/color/studio_config/: config.ocio
src/framecycler/core/: __init__.py  app_icon.py  cache.py  logging_config.py  media_pool.py  media_source.py  otio_model.py  playback_plan.py  playback_timing.py  session.py  settings.py  system_memory.py  tile_layout.py  timecode.py  transport_program.py  updater.py  version.py
src/framecycler/decoders/: __init__.py  base.py  dpx_decoder.py  exr_decoder.py  image_io.py  qt_decoder.py
src/framecycler/extensions/: __init__.py  base_tool.py  ocio_api_tool.py
src/framecycler/render/: __init__.py  rhi_viewport_renderer.py  shader_baker.py  shader_pipeline.py
src/framecycler/render/shaders/: quad.frag.glsl  quad.vert.glsl
src/framecycler/ui/: __init__.py  about_dialog.py  drag_drop_overlay.py  fonts.py  keybind_registry.py  log_viewer.py  main_window.py  overlay_geometry.py  panel_host.py  pixel_probe.py  probe_sampling.py  settings_dialog.py  source_list_panel.py  theme.py  timeline.py  timeline_editor.py  translucent_window.py  viewport.py  widgets.py
src/framecycler/ui/annotations/: __init__.py  geometry.py  icons.py  models.py  overlay.py  paint.py  panel.py
src/framecycler/ui/scopes/: __init__.py  analysis.py  cie_data.py  painters.py  scopes_panel.py
tests/: _present_timing_null_smoke.py  oiio_fixtures.py  test_annotations.py  test_audio_engine.py  test_bundle_filter.py  test_cache_rgba.py  test_cpp_cache.py  test_cpp_renderer.py  test_decoders_oiio.py  test_display_cache.py  test_display_upload_queue.py  test_frame_ready_threading.py  test_gpu_churn.py  test_gpu_present_smoke.py  test_image_io.py  test_logging.py  test_missing_frame_mode.py  test_native_movie_decoder.py  test_ocio_manager.py  test_otio_cdl.py  test_otio_input_colorspace.py  test_otio_trim.py  test_overlay_geometry.py  test_package_api_expansion.py  test_packages.py  test_panel_host.py  test_playback_timing.py  test_prefetch_engine.py  test_probe_sampling.py  test_scope_analysis.py  test_sequence_resolving.py  test_settings.py  test_shader_baker.py  test_shader_pipeline.py  test_system_memory.py  test_testfootage_pipeline.py  test_tile_layout.py  test_timecode.py  test_timeline_editor.py  test_timeline_mapping.py  (+6 more)
